Prevents issue sub title from getting too long

--- a/app/assets/stylesheets/issue-page.sass
+++ b/app/assets/stylesheets/issue-page.sass
@@ -11,9 +11,6 @@
 	font-size: 18px
 	text-align: center
 
-.sub-issue p
-	padding: 0 100px
-
 .timeline
 	background: $thin-brand
 	height: 3px
