--- a/app/assets/stylesheets/partials/_page.sass
+++ b/app/assets/stylesheets/partials/_page.sass
@@ -12,6 +12,8 @@
 		font-size: 13px
 		font-weight: $regular
 		letter-spacing: 5px
+	p
+		padding: 0 100px
 
 .land
 	width: 100%
